--- a/wands.html
+++ b/wands.html
@@ -2,44 +2,44 @@
 
 <div class="wands-circle">
 
-<a href="#neville"><img class="round-wand" src="images/neville.svg" id="wand-nl"/></a>
+<a href="#neville"><img class="round-wand hvr-grow" src="images/neville.svg" id="wand-nl"/></a>
 
-<a href="#fred"><img class="round-wand" src="images/fred.svg" id="wand-fw"/></a>
+<a href="#fred"><img class="round-wand hvr-grow" src="images/fred.svg" id="wand-fw"/></a>
 
-<a href="#george"><img class="round-wand" src="images/george.svg" id="wand-gw"/></a>
+<a href="#george"><img class="round-wand hvr-grow" src="images/george.svg" id="wand-gw"/></a>
 
-<a href="#ginny"><img class="round-wand" src="images/ginny.svg" id="wand-gp"/></a>
+<a href="#ginny"><img class="round-wand hvr-grow" src="images/ginny.svg" id="wand-gp"/></a>
 
-<a href="#ron"><img class="round-wand" src="images/ron.svg" id="wand-rw"/></a>
+<a href="#ron"><img class="round-wand hvr-grow" src="images/ron.svg" id="wand-rw"/></a>
 
-<a href="#harry"><img class="round-wand" src="images/harry.svg" id="wand-hp"/></a>
+<a href="#harry"><img class="round-wand hvr-grow" src="images/harry.svg" id="wand-hp"/></a>
 
-<a href="#hermione"><img class="round-wand" src="images/hermione.svg" id="wand-hg"/></a>
+<a href="#hermione"><img class="round-wand hvr-grow" src="images/hermione.svg" id="wand-hg"/></a>
 
-<a href="#krum"><img class="round-wand" src="images/krum.svg" id="wand-vk"/></a>
+<a href="#krum"><img class="round-wand hvr-grow" src="images/krum.svg" id="wand-vk"/></a>
 
-<a href="#fleur"><img class="round-wand" src="images/fleur.svg" id="wand-fd"/></a>
+<a href="#fleur"><img class="round-wand hvr-grow" src="images/fleur.svg" id="wand-fd"/></a>
 
-<a href="#umbridge"><img class="round-wand" src="images/umbridge.svg" id="wand-du"/></a>
+<a href="#umbridge"><img class="round-wand hvr-grow" src="images/umbridge.svg" id="wand-du"/></a>
 
-<a href="#voldemort"><img class="round-wand" src="images/voldemort.svg" id="wand-v"/></a>
+<a href="#voldemort"><img class="round-wand hvr-grow" src="images/voldemort.svg" id="wand-v"/></a>
 
-<a href="#bellatrix"><img class="round-wand" src="images/bellatrix.svg" id="wand-bl"/></a>
+<a href="#bellatrix"><img class="round-wand hvr-grow" src="images/bellatrix.svg" id="wand-bl"/></a>
 
-<a href="#draco"><img class="round-wand" src="images/draco.svg" id="wand-dm"/></a>
+<a href="#draco"><img class="round-wand hvr-grow" src="images/draco.svg" id="wand-dm"/></a>
 
-<a href="#snape"><img class="round-wand" src="images/snape.svg" id="wand-ss"/></a>
+<a href="#snape"><img class="round-wand hvr-grow" src="images/snape.svg" id="wand-ss"/></a>
 
-<a href="#mcgonagall"><img class="round-wand" src="images/mcgonagall.svg" id="wand-mm"/></a>
+<a href="#mcgonagall"><img class="round-wand hvr-grow" src="images/mcgonagall.svg" id="wand-mm"/></a>
 
-<a href="#albus"><img class="round-wand" src="images/dumbledore.svg" id="wand-ad"/></a>
+<a href="#albus"><img class="round-wand hvr-grow" src="images/dumbledore.svg" id="wand-ad"/></a>
 
-<a href="#tonks"><img class="round-wand" src="images/tonks.svg" id="wand-nt"/></a>
+<a href="#tonks"><img class="round-wand hvr-grow" src="images/tonks.svg" id="wand-nt"/></a>
 
-<a href="#lupin"><img class="round-wand" src="images/lupin.svg" id="wand-rl"/></a>
+<a href="#lupin"><img class="round-wand hvr-grow" src="images/lupin.svg" id="wand-rl"/></a>
 
-<a href="#sirius"><img class="round-wand" src="images/sirius.svg" id="wand-sb"/></a>
+<a href="#sirius"><img class="round-wand hvr-grow" src="images/sirius.svg" id="wand-sb"/></a>
 
-<a href="#luna"><img class="round-wand" src="images/luna.svg" id="wand-ll"/></a>
+<a href="#luna"><img class="round-wand hvr-grow" src="images/luna.svg" id="wand-ll"/></a>
     
     </div>
