--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 <body>
     <article id="top">
     
-        <img class="shop" src="ollivanders.png" />
+        <img class="shop" src="images/ollivanders.png" />
 
        
         <div class="opening-door frame">
-  <div class="door"><a href="page.html"><img class="door" src="door.png" /></a>
+  <div class="door"><a href="page.html"><img class="door" src="images/door.png" /></a>
   </div>
 </div>
 
