--- a/page.html
+++ b/page.html
@@ -168,7 +168,7 @@
     
    <footer class="wands">Discover more about wands <a href="https://www.pottermore.com/explore-the-story/wands" class="fooooter">here</a></footer>
 	
-<footer>Made with &#9829; by: <a href="http://www.leahpsmyth.com" class="fooooter">Leah Smyth</a> 2017 &#169</footer> 
+<footer class="leah-link">&#x2605; <a href="https://www.leahpsmyth.com">Leah Smyth</a></footer>
     </article>
 </body>
 </html>
