--- a/index.html
+++ b/index.html
@@ -21,11 +21,19 @@
 <body>
     <article id="top">
     
-        <img class="shop" src="images/ollivanders.png" />
+        <img class="shop" src="images/ollivanders1.png" />
 
        
         <div class="opening-door frame">
   <div class="door"><a href="page.html"><img class="door" src="images/door.png" /></a>
+  </div>
+</div>
+        <div class="opening-door1 frame1">
+  <div class="door1"><img class="door1" src="images/door1.png" />
+  </div>
+</div>
+        <div class="opening-door2 frame2">
+  <div class="doo2r"><img class="door2" src="images/door2.png" />
   </div>
 </div>
 
